syntax = "proto3";

option go_package = ".;proto";


service User {
    rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
    rpc GetUserByEmail(EmailRequest) returns (UserInfoResponse); // 通过 email 查询用户
    rpc GetUserByID(IDRequest) returns (UserInfoResponse); // 通过 ID 查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 注册添加用户
    rpc UpdateUser(UpdateUserInfo) returns (Empty); // 更新用户信息
    rpc CheckPassword(CheckPasswordInfo) returns (CheckResponse); // 检查密码
}

message Empty {}

message CheckResponse {
    bool success = 1;
}

message CheckPasswordInfo {
    string passward = 1;
    string encryptedPassward = 2;
}

message UpdateUserInfo {
    uint32 id = 1;
    string gender = 2;
    uint64 birthday = 3;
}

message CreateUserInfo {
    string username = 1;
    string email = 2;
    string password = 3;
    string course = 4;
}

message EmailRequest {
    string email = 1;
}

message IDRequest {
    uint32 id = 1;
}

message PageInfo {
    uint32 pageNum = 1;
    uint32 pageSize = 2;
}

message UserInfoResponse {
    uint32 id =1;
    string password = 2;
    string email = 3;
    string username = 4;
    uint64 birthday = 5;
    string gender = 6;
    uint32 role = 7;
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}